[package]
name = "dynamic_sora_effects"
version = "0.6.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.5.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
toml = "0.9.5"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3" 

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
